--- a/index.html
+++ b/index.html
@@ -428,71 +428,71 @@ aside {
       <h3>📘 Притяжательные прилагательные</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="numerais">
+    <div class="card lesson-card" data-key="numerais">
       <h3>📘 Числительные</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="verboSerPresente">
+    <div class="card lesson-card" data-key="verboSerPresente">
       <h3>📘 Глагол "ser" (настоящее время)</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="verboEstarPresente">
+    <div class="card lesson-card" data-key="verboEstarPresente">
       <h3>📘 Глагол "estar" (настоящее время)</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="verboSerPassado">
+    <div class="card lesson-card" data-key="verboSerPassado">
       <h3>📘 Глагол "ser" (прошедшее время)</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="verboEstarPassado">
+    <div class="card lesson-card" data-key="verboEstarPassado">
       <h3>📘 Глагол "estar" (прошедшее время)</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="verboSerFuturo">
+    <div class="card lesson-card" data-key="verboSerFuturo">
       <h3>📘 Глагол "ser" (будущее время)</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="verboEstarFuturo">
+    <div class="card lesson-card" data-key="verboEstarFuturo">
       <h3>📘 Глагол "estar" (будущее время)</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="quantidades">
+    <div class="card lesson-card" data-key="quantidades">
       <h3>📘 Количественные выражения</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="objetoDireto">
+    <div class="card lesson-card" data-key="objetoDireto">
       <h3>📘 Прямое дополнение</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="tempoPresente">
+    <div class="card lesson-card" data-key="tempoPresente">
       <h3>📘 Настоящее время</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="infinitivo">
+    <div class="card lesson-card" data-key="infinitivo">
       <h3>📘 Инфинитив</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="lugares">
+    <div class="card lesson-card" data-key="lugares">
       <h3>📘 Описание мест</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="profissoes">
+    <div class="card lesson-card" data-key="profissoes">
       <h3>📘 Профессии</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="viagem">
+    <div class="card lesson-card" data-key="viagem">
       <h3>📘 Путешествия</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="familia">
+    <div class="card lesson-card" data-key="familia">
       <h3>📘 Семья</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="verbosMovimento">
+    <div class="card lesson-card" data-key="verbosMovimento">
       <h3>📘 Глаголы движения</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="FrasesDeConvercacao">
+    <div class="card lesson-card" data-key="FrasesDeConvercacao">
       <h3>📘 Разговорные фразы</h3>
       <p>Complete este módulo.</p>
     </div>
@@ -1046,6 +1046,7 @@ modoBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
