--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@ aside {
     <a href="exercicio.html">📝 Exercícios</a>
     <a href="jogo.html">🎮 Jogos</a>
     <a href="complete-a-frase.html">🧩 Complete a Frase</a>
+    <a href="quem-somos.html"> Quem somos?</a>
     <a href="chat.html">💬 Chat</a>
   </nav>
   <div class="mascote"> Dimitry</div>
@@ -925,6 +926,7 @@ modoBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
